Fix the sidebar dissapearance issue on tablet portrait mode
It seems that the 250px is slightly to small for the placeholder message of the new select. Because of that the sidebar wraps around and dissapears (visually) from the page. By giving it a width we work around the issue by limiting the width to exactly 250px.

--- a/app/styles/components/_c-interface.scss
+++ b/app/styles/components/_c-interface.scss
@@ -13,10 +13,12 @@
   --sidebar: 100%;
 
   flex-basis: var(--sidebar);
+  // Without this `width`, the sidebar dissapears from the page on some breakpoints if the content is too wide
+  width: var(--sidebar);
   padding: $au-unit-small;
   background-color: var(--au-gray-100);
   border-bottom: .1rem solid var(--au-gray-200);
-  
+
   @include mq(small) {
     --sidebar: 250px;
 
@@ -46,7 +48,7 @@
     left: 0;
     background-color: var(--au-white);
     flex-direction: column;
-  
+
     &.is-visible {
       display: flex;
     }
